# uci-parse

./: .coveragerc  .gitattributes  .mypy.ini  .mypyrc  .pre-commit-config.yaml  .pylintrc  .tabignore  .toxrc  Changelog  DEVELOPER.md  PyPI.md  README.md  SECURITY.md  pyproject.toml  run  tools.ps1
.github/workflows/: tox.yml
.run/commands/: requirements.sh
.run/tasks/: suite.sh
docs/: conf.py  index.rst  requirements.txt
scripts/: install  ucidiff  uciparse
src/tests/uciparse/: test_cli.py  test_uci.py
src/tests/uciparse/fixtures/test_uci/invalid/: list-empty  list-quotes1  option-empty  option-quotes1  package-quotes  unknown-line
src/tests/uciparse/fixtures/test_uci/normalized/: comments  config-only  list-empty-value  list-only  no-config-name
src/tests/uciparse/fixtures/test_uci/original/: comments  double-quote  list-only  no-quote  option-only
src/tests/uciparse/fixtures/test_uci/real/: README.md  dhcp  dropbear  luci  rpcd  ucitrack  wireless
src/uciparse/: cli.py  py.typed  uci.py
tests/: test_cli.py  test_uci.py
tests/fixtures/test_uci/invalid/: config-empty  config-quotes1  config-quotes2  list-quotes2  option-quotes2  package-empty
tests/fixtures/test_uci/normalized/: comments  double-quote  list-only  no-config-name  no-quote  option-empty-value  option-only
tests/fixtures/test_uci/original/: config-only  list-empty-value  no-config-name  option-empty-value  single-quote
tests/fixtures/test_uci/real/: firewall  network  p910nd  system
